--- a/kevinloor.com/data/homepage.yml
+++ b/kevinloor.com/data/homepage.yml
@@ -37,7 +37,7 @@ showcase:
 
 # about
 about:
-  enable: true
+  enable: false
   title: "Resumen"
   content: '<p class="lead">
     I am back, after a few days of vacationing with family. Weather was awesome, the beach was
@@ -62,44 +62,40 @@ education:
   enable: true
   title: "Educación"
   items:
-    - university: "University of Waterloo"
-      year: "2012-2017"
-      degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
+    - university: "Universidad de Guayaquil"
+      year: "2013-2020"
+      degree: "Titulado en Ingeniería en Sistemas Computacionales"
 
-    - university: "Sir John A Macdonald CI"
-      year: "2009-2012"
-      degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
+    
 
 # experience
 experience:
   enable: true
   title: "Experiencia"
-  description: "Over 15+ years of experience working with companies from all over the world. I design & develop digital products to help businesses and improve people's lives."
+  description: "Más de 3 años de experiencia trabajando con empresas nacionales de soluciones Digitales. Apasionado por la ciencia de datos e Inteligencia artificial "
   button:
     icon: "icon-linkedin-fill"
     btnText: "Linkedin"
-    URL: "https://www.linkedin.com/company/radity/"
+    URL: "https://www.linkedin.com/in/kevinloor/"
   button2:
     icon: "icon-profile-fill"
     btnText: "Curriculum"
-    URL: "#"
+    URL: "https://drive.google.com/file/d/1-eUDMUIebpzuyYOxh-Q-5JeaKPewskMY/view?usp=sharing"
 
   items:
-    - title: "Sr. Front-End Developer"
-      company: "Radity"
-      duration: "Feb 2011 - Sep 2019"
+    - title: "Ingeniero de datos"
+      company: "Global Hitss Ecuador"
+      duration: "Abr 2019 - Actualidad"
 
-    - title: "Sr. Front-End Developer"
-      company: "Textic"
-      duration: "Apr 2010 - Jan 2011"
+    - title: "Analista de Sistemas"
+      company: "Righttek"
+      duration: "Sep 2018 - Mar 2019"
 
-    - title: "Jr. Front-End Developer"
-      company: "Cyberse"
-      duration: "Jun 2009 - Mar 2010"
+    
 
 # Client & Work
 client_and_work:
-  title: "Proyectos"
+  title: "Proyectos & Skills"
   enable: true
 
   clients:
@@ -169,7 +165,7 @@ client_and_work:
 
 # testimonial
 testimonial:
-  enable: true
+  enable: false
   title: "Recomendaciones"
   items:
     - name: "Daniel Jordan"
