--- a/kevinloor.com/data/homepage.yml
+++ b/kevinloor.com/data/homepage.yml
@@ -182,22 +182,22 @@ testimonial:
       position: "Cyberse, CEO"
       content: "In this digital generation where information can be easily obtained within seconds, business cards still have retained their importance in the achievement of increased business exposure and business sales. If your business already has a bunch of printed cards distributed to a number of potential customers and yet."
       image:
-        x: "img/cert/platzi_dataviz_bi.png"
-        _2x: "img/cert/platzi_dataviz_bi.png"
+        x: "img/cert/platzi_excel.png"
+        _2x: "img/cert/platzi_excel.png"
 
     - name: "Antonio Willis"
       position: "Cyberse, CEO"
       content: "In this digital generation where information can be easily obtained within seconds, business cards still have retained their importance in the achievement of increased business exposure and business sales. If your business already has a bunch of printed cards distributed to a number of potential customers and yet."
       image:
-        x: "img/cert/platzi_dataviz_bi.png"
-        _2x: "img/cert/platzi_dataviz_bi.png"
+        x: "img/cert/linkedin_py.png"
+        _2x: "img/cert/linkedin_py.png"
 
     - name: "Antonio Willis"
       position: "Cyberse, CEO"
       content: "In this digital generation where information can be easily obtained within seconds, business cards still have retained their importance in the achievement of increased business exposure and business sales. If your business already has a bunch of printed cards distributed to a number of potential customers and yet."
       image:
-        x: "img/cert/platzi_dataviz_bi.png"
-        _2x: "img/cert/platzi_dataviz_bi.png"
+        x: "img/cert/linkedin_powerbi.png"
+        _2x: "img/cert/linkedin_powerbi.png"
 
   
 
